# neutrino-fs

./: .gitignore  AUTHORS  README.md  acinclude.m4  autogen.sh  configure.ac
data/: Makefile.am  satellites.xml  settingsupdate.conf
data/config/: Makefile.am  cables.xml  encoding.conf  satellites.xml  terrestrial.xml  tobackup.conf
data/control/: audioplayer.end  audioplayer.start  deepstandby.off  deepstandby.on  inactivity.on  movieplayer.end  movieplayer.start  neutrino.start  pictureviewer.end  pictureviewer.start  recording.end  recording.start  recording.timer  scan.start  scan.stop  standby.off  standby.on
data/control-arm/: audioplayer.end  audioplayer.start  deepstandby.off  movieplayer.end  neutrino.start  recording.start
data/fonts/: Makefile.am
data/icons/: Makefile.am
data/icons/buttons/: Makefile.am
data/icons/headers/: Makefile.am
data/icons/hints/: Makefile.am
data/icons/own/: Makefile.am
data/icons/status/: Makefile.am
data/icons/status/camd/: Makefile.am
data/icons/status/markers/: Makefile.am
data/icons/status/various/: Makefile.am
data/inetradio/: radio-stations.xml
data/initial/: Makefile.am  bouquets.xml  services.xml  ubouquets.xml
data/locale/: Makefile.am  _readme.txt  deutsch.locale  english.locale
data/locale/helpers/: create-locals-work
data/locale/unmaintained/: bayrisch.locale  ch-berndeutsch.locale  czech.locale  francais.locale  french.locale  hungarian.locale  italiano.locale  nederlands.locale  polski.locale  portugues.locale  russkij.locale  suomi.locale  svenska.locale
data/neutrino-scripts/: Makefile.am  audioplayer.end  audioplayer.start  deepstandby.off  deepstandby.on  movieplayer.end  movieplayer.start  recording.end  recording.start  recording.timer  scan.start  scan.stop  standby.off  standby.on
data/neutrino-scripts-arm/: deepstandby.on  flash.start  movieplayer.start  recording.timer  standby.off  standby.on
data/pictures/: Makefile.am
data/pictures/backgrounds/: Makefile.am
data/pictures/backgrounds/1280x720/: bootlogo.mvi
data/scripts/: install.sh
data/stb-startup/: Makefile.am  stb-startup.cfg  stb-startup.lua
data/themes/: AdulteratedOrange.theme  Franken-White.theme  Franken-Yellow.theme  Franken-white.theme  Franken-yellow.theme  Franken.theme  Frankenstone.theme  Makefile.am  Neutrino-NI.theme  Origin.theme  TangoCash.theme
data/webchannels/: Makefile.am
data/y-web/: Makefile.am  Y_Baselib.js  Y_Blocks.txt  Y_Boxcontrol_Bouquets.yhtm  Y_Boxcontrol_Bouquets_popup.yhtm  Y_Boxcontrol_Menue.yhtm  Y_Info_Help.yhtm  Y_Settings_video_audio.yhtm  Y_Settings_yWeb.yhtm  Y_Settings_zapit.yhtm  Y_StreamInfo.yhtm  Y_Tools_Menue.yhtm
data/y-web/images/: Makefile.am
data/y-web/languages/: Deutsch  English
data/y-web/scripts/: Y_Tools.sh
data/zapit/: Makefile.am  bouquets.xml  services.xml  ubouquets.xml
doc/nhttpd/: nhttpd_controlapi.html
lib/: Makefile.am
lib/jsoncpp/: jsoncpp.cpp
lib/jsoncpp/json/: json.h
lib/libcoolstream/: cnxtfb.h  cs_vfd.h
lib/libcoolstream2/: cs_vfd.h
lib/libdvbsub/: dvbsub.cpp  dvbsub.h  dvbsubtitle.cpp  dvbsubtitle.h
lib/liblcddisplay/: fontrenderer.cpp
lib/libnet/: libnet.cpp  network_interfaces.cpp  network_interfaces.h
lib/libtuxtxt/: tuxtxt.cpp  tuxtxt.h
lib/sectionsdclient/: sectionsdMsg.h  sectionsdclient.cpp  sectionsdclient.h
lib/timerdclient/: timerdclient.cpp  timerdclient.h  timerdtypes.h
lib/xmltree/: xmltimpl.c  xmltok.c  xmltok.h
src/: Makefile.am  global.h  mdev_helper.cpp  neutrino.cpp  neutrino.h  neutrinoMessages.h  neutrino_menue.cpp  neutrino_menue.h  rcsim.c
src/daemonc/: remotecontrol.cpp
src/driver/: Makefile.am  audiometadata.cpp  audiometadata.h  colorgradient.cpp  display.h  fade.cpp  fb_accel.cpp  fb_accel.h  fb_accel_sti.cpp  fb_accel_sti_ddt.cpp  fb_accel_sti_ddt.h  fb_accel_sti_noauto.cpp  fb_generic.cpp  fb_generic.h  fb_generic_sti_ddt.cpp  fb_generic_sti_ddt.h  fb_window.h  fbaccel.cpp  fontrenderer.cpp  fontrenderer.h  framebuffer.cpp  framebuffer.h  framebuffer_ng.cpp  framebuffer_ng.h  genpsi.cpp  genpsi.h  lcd4l.cpp  lcdd.cpp  lcdd.h  moviecut.cpp  movieinfo.cpp  netfile.h  newclock.cpp  newclock.h  nglcd.cpp  nglcd.h  radiotext.cpp  radiotext.h  radiotools.cpp  rcinput.cpp  (+14 more)
src/driver/audiodec/: basedec.cpp  ffmpegdec.cpp  ffmpegdec.h  flacdec.cpp  int_fft.c  mp3dec.cpp
src/driver/pictureviewer/: jpeg.cpp  pictureviewer.cpp  pictureviewer.h
src/eitd/: SIevents.cpp  SIevents.hpp  SIsections.cpp  SIsections.hpp  SIservices.hpp  SIutils.cpp  SIutils.hpp  dmx.cpp  dmx.h  edvbstring.cpp  eitd.h  sectionsd.cpp  xmlutil.cpp  xmlutil.h
src/gui/: 3dsetup.cpp  3dsetup.h  Makefile.am  adzap.cpp  audio_select.cpp  audio_select.h  audio_setup.cpp  audio_setup.h  audiomute.cpp  audioplayer.cpp  audioplayer_setup.h  bookmarkmanager.cpp  bookmarkmanager.h  bouquetlist.cpp  buildinfo.cpp  buildinfo.h  cam_menu.cpp  cec_setup.cpp  cec_setup.h  channellist.cpp  channellist.h  color.cpp  dboxinfo.cpp  epgplus.cpp  epgplus.h  epgview.cpp  epgview.h  eventlist.cpp  eventlist.h  favorites.cpp  filebrowser.cpp  filebrowser.h  followscreenings.cpp  glcdsetup.cpp  hdd_menu.cpp  imageinfo.cpp  imageinfo.h  info_menue.cpp  info_menue.h  infoclock.cpp  (+93 more)
src/gui/bedit/: bouqueteditor_bouquets.cpp  bouqueteditor_channels.cpp  bouqueteditor_chanselect.cpp  bouqueteditor_chanselect.h
src/gui/components/: Makefile.am  cc_base.h  cc_button_select.cpp  cc_button_select.h  cc_detailsline.cpp  cc_detailsline.h  cc_draw.cpp  cc_draw.h  cc_extra.cpp  cc_extra.h  cc_frm.cpp  cc_frm.h  cc_frm_button.cpp  cc_frm_button.h  (+33 more)
src/lcddisplay/: fontrenderer.cpp  fontrenderer.h  lcddisplay.cpp  lcddisplay.h
src/nhttpd/: nhttpd.conf.in  yconfig.h
src/system/: configure_network.cpp  configure_network.h  flashtool.cpp  flashtool.h  fsmounter.cpp  fsmounter.h  helpers.cpp  helpers.h  lastchannel.cpp  lastchannel.h  localize.cpp  localize.h  locals.h  locals_intern.h  ping-linux.h  ping.cpp  ping.h  setting_helpers.cpp  setting_helpers.h  settings.cpp  settings.h
src/timerd/: timerd.cpp  timermanager.cpp  timermanager.h
(+97 files in other folders)
