installdir = $(ICONSDIR)

locale = \
	locale/deutsch.png \
	locale/english.png

locale_unmaintained = \
	locale/unmaintained/bayrisch.png \
	locale/unmaintained/bosanski.png \
	locale/unmaintained/ch-baslerdeutsch.png \
	locale/unmaintained/ch-berndeutsch.png \
	locale/unmaintained/czech.png \
	locale/unmaintained/francais.png \
	locale/unmaintained/italiano.png \
	locale/unmaintained/nederlands.png \
	locale/unmaintained/polski.png \
	locale/unmaintained/portugues.png \
	locale/unmaintained/russkij.png \
	locale/unmaintained/slovak.png \
	locale/unmaintained/suomi.png \
	locale/unmaintained/svenska.png

install_DATA  = $(locale)
# install_DATA += $(locale_unmaintained)

install_DATA += \
	0-green.png \
	0.png \
	0-red.png \
	16_9_gray.png \
	16_9.png \
	1-green.png \
	1.png \
	1-red.png \
	2-green.png \
	2.png \
	2-red.png \
	3-green.png \
	3.png \
	3-red.png \
	4-green.png \
	4.png \
	4-red.png \
	5-green.png \
	5.png \
	5-red.png \
	6-green.png \
	6.png \
	6-red.png \
	7-green.png \
	7.png \
	7-red.png \
	8-green.png \
	8.png \
	8-red.png \
	9-green.png \
	9.png \
	9-red.png \
	ats_gray.png \
	ats.png \
	audioplay.png \
	audio.png \
	bc_green.png \
	bc_yellow.png \
	biss_green.png \
	biss_white.png \
	biss_yellow.png \
	blau.png \
	bookmarkmanager.png \
	border_lr.png \
	border_ul.png \
	btn_backward.png \
	btn_forward.png \
	btn_pause.png \
	btn_play.png \
	btn_record_active.png \
	btn_record_inactive.png \
	btn_stop.png \
	ca2_gray.png \
	ca2.png \
	camd3_green.png \
	camd3_white.png \
	camd3_yellow.png \
	ca.png \
	checkmark.png \
	ci+_green.png \
	ci+_grey.png \
	colors.png \
	conax_green.png \
	conax_white.png \
	conax_yellow.png \
	cw_green.png \
	cw_white.png \
	cw_yellow.png \
	dd_avail.png \
	dd_gray.png \
	dd.png \
	dec_card.png \
	dec_fta.png \
	dec_int.png \
	dec_na.png \
	dec_net.png \
	d_green.png \
	down.png \
	dummy.png \
	dummy_small.png \
	d_white.png \
	d_yellow.png \
	epg.png \
	error.png \
	features.png \
	file.png \
	folder.png \
	games.png \
	gbox_green.png \
	gbox_white.png \
	gbox_yellow.png \
	gelb.png \
	gruen.png \
	help.png \
	help_small.png \
	hidden.png \
	hint_adzap.png \
	hint_a_pic.png \
	hint_aplay.png \
	hint_audio.png \
	hint_back.png \
	hint_bedit.png \
	hint_ci.png \
	hint_dboxinfo.png \
	hint_delete.png \
	hint_extended.png \
	hint_fileplay.png \
	hint_games.png \
	hint_hdd.png \
	hint_imageinfo.png \
	hint_inetradio.png \
	hint_info.png \
	hint_keys.png \
	hint_language.png \
	hint_manage.png \
	hint_mb.png \
	hint_media.png \
	hint_movie.png \
	hint_network.png \
	hint_next.png \
	hint_osd.png \
	hint_personalize.png \
	hint_picview.png \
	hint_plugin.png \
	hint_protection.png \
	hint_radiomode.png \
	hint_reboot.png \
	hint_recording.png \
	hint_reload.png \
	hint_restart.png \
	hint_save.png \
	hint_scan.png \
	hint_scripts.png \
	hint_service.png \
	hint_settings.png \
	hint_shutdown.png \
	hint_sleeptimer.png \
	hint_streaminfo.png \
	hint_swupdate.png \
	hint_timers.png \
	hint_tvmode.png \
	hint_tvradio_switch.png \
	hint_vfd.png \
	hint_video.png \
	home.png \
	icon_blue.png \
	icon_green.png \
	icon_movieplayer.png \
	icon_red.png \
	icon_yellow.png \
	important.png \
	incubusCamd_green.png \
	incubusCamd_yellow.png \
	info_blue.png \
	info_green.png \
	info.png \
	info_red.png \
	information.png \
	info_small.png \
	info_yellow.png \
	ird_green.png \
	ird_white.png \
	ird_yellow.png \
	keybinding.png \
	language.png \
	lcd.png \
	left.png \
	local.png \
	lock_passive.png \
	lock.png \
	mainmenue.png \
	mbox_green.png \
	mbox_yellow.png \
	menu.png \
	menu_small.png \
	mgcamd_green.png \
	mgcamd_white.png \
	mgcamd_yellow.png \
	mounted.png \
	movie.png \
	mp3-0.jpg \
	mp3-1.jpg \
	mp3-2.jpg \
	mp3-3.jpg \
	mp3-4.jpg \
	mp3-5.jpg \
	mp3-6.jpg \
	mp3-7.jpg \
	mp3.jpg \
	mp3.png \
	mp_b-skip.png \
	mp_f-skip.png \
	mp_pause.png \
	mp_play.png \
	mp_play_repeat_all.png \
	mp_play_repeat_track.png \
	multimedia.png \
	mute.png \
	mute_small.png \
	mute_zap_gray.png \
	mute_zap_green.png \
	nagra_green.png \
	nagra_white.png \
	nagra_yellow.png \
	nds_green.png \
	nds_white.png \
	nds_yellow.png \
	network.png \
	newcs_green.png \
	newcs_yellow.png \
	not_mounted.png \
	notyet.png \
	numericpad.png \
	ok.png \
	oscam_green.png \
	oscam_white.png \
	oscam_yellow.png \
	personalize.png \
	picture.png \
	pip.png \
	power.png \
	powervu_green.png \
	powervu_white.png \
	powervu_yellow.png \
	question.png \
	radar0.raw \
	radar1.raw \
	radar2.raw \
	radar3.raw \
	radar4.raw \
	radar5.raw \
	radar6.raw \
	radar7.raw \
	radar8.raw \
	radar9.raw \
	radar.pal \
	radar_red.pal \
	radiomode.jpg \
	radiotextget.png \
	radiotextoff.png \
	radiotextwait.png \
	rass.png \
	rclock.png \
	rec_event_marker.png \
	rec_gray.png \
	recording.png \
	rec.png \
	res_000.png \
	res_1080.png \
	res_1280.png \
	res_1440.png \
	res_1920.png \
	res_288.png \
	res_352.png \
	res_382.png \
	res_480.png \
	res_528.png \
	res_544.png \
	res_576.png \
	res_704.png \
	res_720.png \
	res_hd.png \
	res_sd.png \
	right.png \
	rot.png \
	scan.jpg \
	seca_green.png \
	seca_white.png \
	seca_yellow.png \
	settings.png \
	shell.png \
	shutdown.jpg \
	softupdate.png \
	star-off.png \
	star-on.png \
	start.jpg \
	streaming.png \
	subt_gray.png \
	subt.png \
	timer.png \
	tmdb.png \
	tuner_1.png \
	tuner_2.png \
	tuner_3.png \
	tuner_4.png \
	upnp.png \
	up.png \
	via_green.png \
	via_white.png \
	via_yellow.png \
	video.png \
	vizcam_green.png \
	vizcam_yellow.png \
	volumebody.png \
	volume.png \
	volumeslider2alpha.png \
	volumeslider2blue.png \
	volumeslider2green.png \
	volumeslider2.png \
	volumeslider2red.png \
	vtxt_gray.png \
	vtxt.png \
	warning.png \
	wicardd_green.png \
	wicardd_yellow.png
	x_green.png \
	x_white.png \
	x_yellow.png \
	zap.png
