
installdir = $(CONFIGDIR)
install_DATA = flash.start

install_DATA += \
	audioplayer.end \
	audioplayer.start \
	deepstandby.off \
	deepstandby.on \
	inactivity.on \
	movieplayer.end \
	movieplayer.start \
	neutrino.start \
	recording.end \
	recording.start \
	recording.timer \
	scan.start \
	scan.stop \
	standby.off \
	standby.on

install-data-hook:
	chmod 0755 $(DESTDIR)$(CONFIGDIR)/audioplayer.end
	chmod 0755 $(DESTDIR)$(CONFIGDIR)/audioplayer.start
	chmod 0755 $(DESTDIR)$(CONFIGDIR)/deepstandby.off
	chmod 0755 $(DESTDIR)$(CONFIGDIR)/deepstandby.on
	chmod 0755 $(DESTDIR)$(CONFIGDIR)/inactivity.on
	chmod 0755 $(DESTDIR)$(CONFIGDIR)/flash.start
	chmod 0755 $(DESTDIR)$(CONFIGDIR)/movieplayer.end
	chmod 0755 $(DESTDIR)$(CONFIGDIR)/movieplayer.start
	chmod 0755 $(DESTDIR)$(CONFIGDIR)/neutrino.start
	chmod 0755 $(DESTDIR)$(CONFIGDIR)/recording.end
	chmod 0755 $(DESTDIR)$(CONFIGDIR)/recording.start
	chmod 0755 $(DESTDIR)$(CONFIGDIR)/recording.timer
	chmod 0755 $(DESTDIR)$(CONFIGDIR)/scan.start
	chmod 0755 $(DESTDIR)$(CONFIGDIR)/scan.stop
	chmod 0755 $(DESTDIR)$(CONFIGDIR)/standby.off
	chmod 0755 $(DESTDIR)$(CONFIGDIR)/standby.on
