installdir = $(THEMESDIR)

install_DATA = \
	Classic.theme \
	Crema.theme \
	DVB2000.theme \
	DarkBlue.theme \
	DarkBrown.theme \
	Franken.theme \
	Gray.theme \
	Gray-Black.theme \
	Gray-Blue.theme \
	MonoChrom.theme \
	Neutrino-3.0.theme \
	Olive.theme \
	Olive-3.0.theme \
	Red.theme \
	VirginMedia.theme
