installdir = $(ICONSDIR)

install_DATA = \
	bc_green.png \
	bc_yellow.png \
	camd3_green.png \
	camd3_white.png \
	camd3_yellow.png \
	ci+_green.png \
	ci+_grey.png \
	dec_card.png \
	dec_fta.png \
	dec_int.png \
	dec_na.png \
	dec_net.png \
	gbox_green.png \
	gbox_white.png \
	gbox_yellow.png \
	incubusCamd_green.png \
	incubusCamd_yellow.png \
	info_blue.png \
	info_green.png \
	info_red.png \
	info_yellow.png \
	mbox_green.png \
	mbox_yellow.png \
	mgcamd_green.png \
	mgcamd_white.png \
	mgcamd_yellow.png \
	newcs_green.png \
	newcs_yellow.png \
	oscam_green.png \
	oscam_white.png \
	oscam_yellow.png \
	vizcam_green.png \
	vizcam_yellow.png \
	wicardd_green.png \
	wicardd_yellow.png
