installdir = $(ICONSDIR)

install_DATA = \
	camd3_green.png \
	camd3_white.png \
	camd3_yellow.png \
	ci+_green.png \
	ci+_grey.png \
	dec_card.png \
	dec_fta.png \
	dec_int.png \
	dec_na.png \
	dec_net.png \
	gbox_green.png \
	gbox_white.png \
	gbox_yellow.png \
	mgcamd_green.png \
	mgcamd_white.png \
	mgcamd_yellow.png \
	oscam_green.png \
	oscam_white.png \
	oscam_yellow.png
