installdir = $(BACKGROUNDS)

resolution = 1280x720

install_DATA = \
	$(resolution)/scan.jpg


install-data-hook:
	ln -sf $(BACKGROUNDS)/scan.jpg $(DESTDIR)$(ICONSDIR)/mp3.jpg
	ln -sf $(BACKGROUNDS)/scan.jpg $(DESTDIR)$(ICONSDIR)/radiomode.jpg
	ln -sf $(BACKGROUNDS)/scan.jpg $(DESTDIR)$(ICONSDIR)/scan.jpg
#	ln -sf $(BACKGROUNDS)/scan.jpg $(DESTDIR)$(ICONSDIR)/shutdown.jpg
#	ln -sf $(BACKGROUNDS)/scan.jpg $(DESTDIR)$(ICONSDIR)/start.jpg
